--- a/museum/index.html
+++ b/museum/index.html
@@ -16,12 +16,12 @@
             <div class="logo-pic flex-container text-upper"><span ></span>Louvre</div>
             <nav>
                 <ul class="flex-container">
-                    <li ><a href="#Visiting">Visiting</a></li>
-                    <li class="li-header"><a href="#Explore">Explore</a></li>
-                    <li class="li-header"><a href="#Video">Video</a></li>
-                    <li class="li-header"><a href="#Gallery">Gallery</a></li>
-                    <li class="li-header"><a href="#Tickets">Tickets</a></li>
-                    <li class="li-header"><a href="#Contacts">Contacts</a></li>
+                    <li><a class="hover-gold" href="#Visiting">Visiting</a></li>
+                    <li class="li-header"><a class="hover-gold" href="#Explore">Explore</a></li>
+                    <li class="li-header"><a class="hover-gold" href="#Video">Video</a></li>
+                    <li class="li-header"><a class="hover-gold" href="#Gallery">Gallery</a></li>
+                    <li class="li-header"><a class="hover-gold" href="#Tickets">Tickets</a></li>
+                    <li class="li-header"><a class="hover-gold" href="#Contacts">Contacts</a></li>
                 </ul>
             </nav>
         </div> 
@@ -29,10 +29,24 @@
     <main>
         <section id="Welcome" class="dark-section">
             <div class="flex-container container relative">
+                <div class="counter-pic flex-container">
+                    <div class="counter flex-container"><span>01 | 05</span></div>
+                    <div class="squares flex-container">
+                        <div class="square-bullet square-bullet_1"></div>
+                        <div class="square-bullet"></div>
+                        <div class="square-bullet"></div>
+                        <div class="square-bullet"></div>
+                        <div class="square-bullet"></div>
+                    </div>
+                    <div class="arrows flex-container">
+                        <button class="left-arrow"></button>
+                        <button class="right-arrow"></button>
+                    </div>
+                </div>
                 <div class="text-white heading-text-container ">
                  <h2 class="heading-text">welcome<br> to the louvre</h2>
                  <p>From the castle to the museum</p>
-                 <button class="flex-button" onclick="document.location='./tours/tour1.html'">Discover
+                 <button class="flex-button button-gold" onclick="document.location='./tours/tour1.html'">Discover
                     the Louvre</button>
                 </div>
                 <div class="slider-container">
@@ -65,19 +79,19 @@
                         </a>
                         <a class="card" href="./tours/tour5.html" target="_blank">
                             <img class="img-card" src="./assets/img/Greek_hall.jpg" alt="Greek Hall">
-                            <h3 class="card-text underline-card">Greek Hall</h3>
+                            <h3 class="card-text underline-card_">Greek Hall</h3>
                             <p class="card-paragraph">360° Virtual Tour</p>
                             <p class="small-paragraph">Google Street Panorama View</p>
                         </a>
                         <a class="card" href="./tours/tour6.html" target="_blank">
                             <img class="img-card" src="./assets/img/Mona_lisa.jpg" alt="Mona Lisa">
-                            <h3 class="card-text underline-card">Mona Lisa</h3>
+                            <h3 class="card-text underline-card_">Mona Lisa</h3>
                             <p class="card-paragraph">360° Virtual Tour</p>
                             <p class="small-paragraph">Google Street Panorama View</p>
                         </a>
                         <a class="card" href="./tours/tour7.html" target="_blank">
                             <img class="img-card" src="./assets/img/Night_place.jpg" alt="Night Palace">
-                            <h3 class="card-text underline-card">Night Palace</h3>
+                            <h3 class="card-text underline-card_">Night Palace</h3>
                             <p class="card-paragraph">360° Virtual Tour</p>
                             <p class="small-paragraph">Google Street Panorama View</p>
                         </a>
@@ -87,18 +101,25 @@
         <section id="Explore" class="section dark-section">
             <div class="container flex-container">
                 <div class="text-explore">
-                    <h2 class="mb-103 text-white heading-text text-upper underline-title">Picture explore</h2>
+                    <h2 class="mb-106 text-white heading-text text-upper underline-title">Picture explore</h2>
                     <p class="p-text text-white pb-25">Las Meninas is a 1656 painting by Diego Velázquez, the leading<br> artist of the Spanish Golden Age.</p>
                     <p class="p-text text-white pb-27">It was cleaned in 1984 to remove a <span class="text-gold">"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p>
                     <p class="p-text text-white">The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p>
                 </div>
-                <img class="explore-pic" src="./assets/img/explore-slider/before.jpeg" alt="before">
+                <!-- <img class="explore-pic" src="./assets/img/explore-slider/before.jpeg" alt="before"> -->
+                <div class='slider-container-explore'>
+                    <div class='img background-img'></div>
+                    <div class='img foreground-img'></div>
+                    <input type="range" min="1" max="100" value="50" class="slider" name='slider'>
+                    <div class='slider-button'></div>
+                </div>
             </div>
+            
         </section>
         <section id="Video" class="video-section">
             <div class="container flex-container column">
                 <div class="flex-container align-c">
-                    <h2 class="mt-75 pt-110 heading-text text-upper text-gold">Video Journey</h2>
+                    <h2 class="mt-75 pt-114 heading-text text-upper text-gold">Video Journey</h2>
                      <p class="mt-75 p-text text-black block">Enter and visit one of the most famous museums in the world and enjoy masterpieces such as Mona Lisa or Hammurabi's Code</p>
                 </div>   
                 <div class="player-container">
@@ -108,7 +129,7 @@
                     </div>
                     <div class="controls">
                         <button class="small-play"></button>
-                        <input type="range" value="40" min="0" max="100" step="1" class="progress">
+                        <input type="range" value="54" min="0" max="100" step="1" class="progress">
                         <button class="volume"></button>
                         <input type="range" value="40" min="0" max="100" step="1" class="volume-progress">
                         <button class="fullscreen"></button>
@@ -119,10 +140,14 @@
                     <iframe width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <iframe width="452" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
-                <div class="video-controls">
+                <div class="video-controls flex-container">
                     <button class="left-scroll"></button>
+                    <div class="circle-control dark"></div>
+                    <div class="circle-control"></div>
+                    <div class="circle-control"></div>
+                    <div class="circle-control"></div>
+                    <div class="circle-control"></div>
                     <button class="right-scroll"></button>
-
                 </div>
             </div>
         </section>
@@ -176,7 +201,7 @@
                                 onclick="this.previousElementSibling.stepUp()">+</button>
                             </div>
                             <p class="total">Total €220</p>
-                            <button class="buy-now">Buy Now</button>
+                            <button class="buy-now button-gold">Buy Now</button>
                           </div>
                     </div>
                 </div>
@@ -212,12 +237,12 @@
                 <div class="footer-nav ">
                     <nav>
                         <ul>
-                            <li><a class="" href="#Visiting">Visiting</a></li>
-                            <li><a class="" href="#Explore">Explore</a></li>
-                            <li><a class="" href="#Video">Video</a></li>
-                            <li><a class="" href="#Gallery">Gallery</a></li>
-                            <li><a class="" href="#Tickets">Tickets</a></li>
-                            <li><a class="" href="#Contacts">Contacts</a></li>
+                            <li><a class="hover-gold" href="#Visiting">Visiting</a></li>
+                            <li><a class="hover-gold" href="#Explore">Explore</a></li>
+                            <li><a class="hover-gold" href="#Video">Video</a></li>
+                            <li><a class="hover-gold" href="#Gallery">Gallery</a></li>
+                            <li><a class="hover-gold" href="#Tickets">Tickets</a></li>
+                            <li><a class="hover-gold" href="#Contacts">Contacts</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -245,7 +270,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="http://twitter.com/museelouvre">
+                            <a class="circle-a" href="http://twitter.com/museelouvre">
                                 <div class="circle"> 
                                     <img class="social-icon" src="./assets/svg/twitter.svg" alt="twitter">
                                 </div>
@@ -264,8 +289,8 @@
             <div class="footer-2 flex-container dark-section">
                 <ul class="flex-container ul-footer">
                     <li><p class="footer-2-text">© 2021</p></li>
-                    <li><a class="footer-2-text" href="https://rs.school/" target="_blank">The Rolling Scopes School</a></li>
-                    <li><a class="footer-2-text" href="https://github.com/Anasstassia" target="_blank">Anasstassia</a></li>
+                    <li><a class="footer-2-text hover-gold" href="https://rs.school/" target="_blank">The Rolling Scopes School</a></li>
+                    <li><a class="footer-2-text hover-gold" href="https://github.com/Anasstassia" target="_blank">Anasstassia</a></li>
              </ul>
             </div>
         </div>
