fix: social icons

--- a/museum/index.html
+++ b/museum/index.html
@@ -251,35 +251,35 @@
                         <li> 
                             <a href="https://www.youtube.com/user/louvre">
                                 <div class="circle">   
-                                    <img class="social-icon" src="./assets/svg/youtube.svg" alt="youtube">
+                                    <img class="social-icon" src="./assets/svg/Youtube.svg" alt="youtube">
                                 </div>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.instagram.com/museelouvre/">
                                 <div class="circle"> 
-                                    <img class="social-icon" src="./assets/svg/instagram.svg" alt="instagram">
+                                    <img class="social-icon" src="./assets/svg/Instagram.svg" alt="instagram">
                                 </div>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com/museedulouvre">
                                 <div class="circle"> 
-                                    <img class="social-icon" src="./assets/svg/facebook.svg" alt="facebook">
+                                    <img class="social-icon" src="./assets/svg/Facebook.svg" alt="facebook">
                                 </div>
                             </a>
                         </li>
                         <li>
                             <a class="circle-a" href="http://twitter.com/museelouvre">
                                 <div class="circle"> 
-                                    <img class="social-icon" src="./assets/svg/twitter.svg" alt="twitter">
+                                    <img class="social-icon" src="./assets/svg/Twitter.svg" alt="twitter">
                                 </div>
                             </a>
                         </li>
                         <li>
                             <a href="https://www.pinterest.fr/museedulouvre/">
                                 <div class="circle"> 
-                                    <img class="social-icon" src="./assets/svg/pinterest.svg" alt="pinterest">
+                                    <img class="social-icon" src="./assets/svg/Pinterest.svg" alt="pinterest">
                                 </div>
                             </a>
                         </li>
