fix: element width

--- a/museum/index.html
+++ b/museum/index.html
@@ -110,7 +110,7 @@
                 <div class='slider-container-explore'>
                     <div class='img background-img'></div>
                     <div class='img foreground-img'></div>
-                    <input type="range" min="1" max="100" value="50" class="slider" name='slider'>
+                    <input type="range" min="1" max="100" value="62" class="slider" name='slider'>
                     <div class='slider-button'></div>
                 </div>
             </div>
@@ -155,8 +155,11 @@
         <section id="Gallery" class="section dark-section">
             <div class="container flex-container gallery">
                 <h2 class="mb-103 text-white heading-text text-upper">Art Gallery</h2>
-
-
+                <div class="picture-outer-container">
+                    <div class="picture-inner-container">
+                        
+                    </div>
+                </div>
             </div>
         </section>
 
