feat: done others work

--- a/museum-adaptive/index.html
+++ b/museum-adaptive/index.html
@@ -55,7 +55,18 @@
                         <source srcset="./assets/img/Sl-768.png" media="(max-width: 768px)">
                             <img class="slider-img" src="./assets/img/Sl-1.jpg" alt="slider">
                     </picture>
-                 </div>
+                </div>
+                <!-- <div class="menu-pictures">
+                    <div>
+                        <picture>
+                            <source srcset="./assets/img/menu-pictures/sm1.png" media="(max-width: 420px)">
+                            <img class="" src="./assets/img/menu-pictures/1image.png" alt="menu">
+                        </picture>
+                    </div>
+                    <div>
+
+                    </div>
+                </div> -->
             </div>
         </section>
 
