--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./normalize.css"/>
     <link rel="stylesheet" href="./style.css"/>
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
 </head>
 <body>
     <header class="dark-section">
@@ -31,7 +33,7 @@
         <section id="Welcome" class="dark-section">
             <div class="flex-container container relative pb-media column-m">
                 <div class="counter-pic flex-container">
-                    <div class="counter flex-container"><span>01 | 05</span></div>
+                    <div class="counter flex-container"><span><span id="current">01</span> | <span id="count">05</span></span></div>
                     <div class="squares flex-container">
                         <div class="square-bullet square-bullet_1"></div>
                         <div class="square-bullet"></div>
@@ -51,10 +53,7 @@
                     the Louvre</button>
                 </div>
                 <div class="slider-container">
-                    <picture>
-                        <source srcset="./assets/img/Sl-768.png" media="(max-width: 768px)">
-                            <img class="slider-img" src="./assets/img/Sl-1.jpg" alt="slider">
-                    </picture>
+                    <img class="slider-img" src="" alt="slider">
                 </div>
                 <!-- <div class="menu-pictures">
                     <div>
@@ -125,7 +124,7 @@
                 <div class='slider-container-explore'>
                     <div class='img background-img'></div>
                     <div class='img foreground-img'></div>
-                    <input type="range" min="1" max="100" value="62" class="slider" name='slider'>
+                    <input type="range" min="1" max="100" value="50" class="slider" name='slider'>
                     <div class='slider-button'></div>
                 </div>
             </div>
@@ -261,8 +260,8 @@
                                 <a class="address-text" href="mailto:info@louvre.fr">info@louvre.fr</a>
                             </p>
                         </div>
-                        <div class="map-container"> 
-                            <img class="map-pic" src="./assets/img/map.png" alt=""/>
+                        <div id="map" class="map-pic"> 
+                            <!-- <img class="map-pic" src="./assets/img/map.png" alt=""/> -->
                         </div>
                     </div>
             </div>
