--- a/museum-dom/index.html
+++ b/museum-dom/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./normalize.css"/>
     <link rel="stylesheet" href="./style.css"/>
     <link rel="icon" href="./assets/img/favicon.ico" type="image/x-icon">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"> -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.0/mapbox-gl.js"></script>
 </head>
@@ -46,6 +47,7 @@
                         <button class="right-arrow"></button>
                     </div>
                 </div>
+                <div class="filter"></div>
                 <div class="text-white heading-text-container ">
                  <h2 class="text-center heading-text">welcome<br> to the louvre</h2>
                  <p>From the castle to the museum</p>
@@ -55,17 +57,6 @@
                 <div class="slider-container">
                     <img class="slider-img" src="" alt="slider">
                 </div>
-                <!-- <div class="menu-pictures">
-                    <div>
-                        <picture>
-                            <source srcset="./assets/img/menu-pictures/sm1.png" media="(max-width: 420px)">
-                            <img class="" src="./assets/img/menu-pictures/1image.png" alt="menu">
-                        </picture>
-                    </div>
-                    <div>
-
-                    </div>
-                </div> -->
             </div>
         </section>
 
@@ -120,7 +111,6 @@
                     <p class="p-text text-white pb-27  display-none">It was cleaned in 1984 to remove a <span class="text-gold">"yellow veil"</span> of dust that had gathered since the previous restoration in the 19th century.</p>
                     <p class="p-text text-white hidden">The cleaning provoked furious protests, not because the picture had been damaged in any way, but because it looked different.</p>
                 </div>
-                <!-- <img class="explore-pic" src="./assets/img/explore-slider/before.jpeg" alt="before"> -->
                 <div class='slider-container-explore'>
                     <div class='img background-img'></div>
                     <div class='img foreground-img'></div>
@@ -150,9 +140,9 @@
                     </div>
                 </div>
                 <div class="video-slider">
-                    <iframe width="452" height="254" src="https://www.youtube.com/embed/aWmJ5DgyWPI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                
-                    <iframe width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <iframe width="452" class="none-video" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <div id="current1"><iframe width="452" height="254" src="https://www.youtube.com/embed/aWmJ5DgyWPI" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>                
+                    <div id="current2"><iframe width="452" height="254" src="https://www.youtube.com/embed/Vi5D6FKhRmo" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <div id="current3"><iframe width="452" class="none-video" height="254" src="https://www.youtube.com/embed/NOhDysLnTvY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </div>
                 <div class="video-controls flex-container">
                     <button class="left-scroll"></button>
@@ -171,22 +161,22 @@
                 <h2 class="mb-103 text-white heading-text text-upper ">Art Gallery</h2>
                 <div class="picture-outer-container">
                         <div class="column-gallery column-1">
-                            <img class="gallery-img" src="assets/img/gallery/galery2.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery9.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery4.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery6.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery2.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery9.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery4.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery6.jpeg" alt="">
                           </div>
                           <div class="column-gallery">
-                            <img class="gallery-img" src="assets/img/gallery/galery1.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery8.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery3.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery5.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery1.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery8.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery3.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery5.jpeg" alt="">
                           </div>
                           <div class="column-gallery column-3 coll3-none">
-                            <img class="gallery-img" src="assets/img/gallery/galery7.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery10.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery15.jpeg" alt="">
-                            <img class="gallery-img" src="assets/img/gallery/galery12.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery7.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery10.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery15.jpeg" alt="">
+                            <img class="gallery-img slide-in _anim-items" src="assets/img/gallery/galery12.jpeg" alt="">
                           </div>
                           <div class="color-filter"></div>
                         </div>
@@ -335,6 +325,7 @@
             </div>
         </div>
     </footer>
+    <!-- <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script> -->
     <script src="./index.js"></script>
 </body>
 </html>
