--- a/momentum/index.html
+++ b/momentum/index.html
@@ -50,6 +50,8 @@
     </div>
   </footer>
   <!-- <script src="js/script.js"></script> -->
-  <script src="./index.js"></script>
+  <script src="./dist/main.js"></script>
+
+  <!-- <script src="./index.js"></script> -->
 </body>
 </html>
